--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
   "dependencies": {
     "autoprefixer": "^10.4.23",
     "bcryptjs": "^3.0.3",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.5.1",
     "cookie": "^1.1.1",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.3",
-    "lucide-react": "^0.263.1",
+    "lucide-react": "^0.562.0",
     "mongoose": "^9.1.1",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-chartjs-2": "^5.3.1",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^4.1.18"
   }
 }
