--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "@tailwindcss/postcss": "^1"
   }
 }
