--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "chart.js": "^4.5.1",
     "cookie": "^1.1.1",
     "dotenv": "^17.2.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.1.1",
     "next": "^16.1.1",
+    "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.1",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "@tailwindcss/postcss": "^1"
+    "tailwindcss": "^3.4.19"
   }
 }
